# binary-loss

./: LICENSE  README.md  pyproject.toml
data/interim/: choices13k_advanced_features.parquet  choices13k_common.parquet  choices13k_features.parquet  cpc18_advanced_features.parquet  cpc18_common.parquet  cpc18_features.parquet
outputs/figures/: figure_captions.md
outputs/reports/: advanced_feature_summary.md  choices13k_condition_repeats.md  choices13k_ev_failure_analysis.md  choices13k_feature_summary.md  cpc18_clustered_trial_check.md  cpc18_learning_dynamics.md  cpc18_normalization_summary.md  cpc_lottery_reconstruction_report.md  cross_dataset_ev_failure_comparison.md  dataset_inventory.md  decision_focused_slim_revision_summary.md  final_minor_cleanup_after_gemini.md  graph_exploration_summary.md  graph_prototype_summary.md  graph_results_validation_and_leakage_audit.md  internal_review_decision_style.md  manuscript_draft_summary.md  manuscript_major_revision_summary.md  paper1_decision_length_trim_report.md  paper1_decision_submission_compliance_report.md  (+6 more)
scripts/: analyze_choices13k_condition_repeats.py  analyze_choices13k_ev_failures.py  analyze_cpc18_learning_dynamics.py  analyze_predictive_feature_ablation.py  build_advanced_features.py  check_choices13k.py  compare_choices13k_cpc18_ev_failures.py  export_graph_prototype.py  inspect_datasets.py  make_publication_figures.py  normalize_choices13k.py  normalize_cpc18.py  run_cpc18_clustered_trial_check.py  run_graph_exploration.py  run_graph_validation_audit.py  run_revision_inference.py
(+35 files in other folders)
