[project]
name = "cognitive-graph"
version = "0.1.0"
description = "Exploratory analysis of risky choice datasets"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "neo4j>=5.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter"]
